--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -25,11 +25,16 @@
     "zod": "^3.0.0",
     "zustand": "^4.0.0",
     "axios": "^1.0.0",
+    "jsonwebtoken": "^9.0.0",
+    "mongoose": "^8.0.0",
+    "bcryptjs": "^2.4.3",
     "js-cookie": "^3.0.0",
     "lucide-react": "^0.290.0"
   },
   "devDependencies": {
     "@types/js-cookie": "^3.0.0",
+    "@types/jsonwebtoken": "^9.0.0",
+    "@types/bcryptjs": "^2.4.6",
     "@types/node": "^20.0.0"
   }
 }
