--- a/.env.example
+++ b/.env.example
@@ -1,7 +1,7 @@
 # MongoDB
-MONGODB_URI=mongodb://localhost:27017/tohwa
+MONGODB_URI=mongodb://localhost:27017/ddowa
 # or use MongoDB Atlas:
-# MONGODB_URI=mongodb+srv://username:password@cluster.mongodb.net/tohwa
+# MONGODB_URI=mongodb+srv://username:password@cluster.mongodb.net/ddowa
 
 # JWT Secret (use a strong random string in production)
 JWT_SECRET=your-super-secret-key-change-this
