--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -28,8 +28,7 @@
     "jsonwebtoken": "^9.0.0",
     "mongoose": "^8.0.0",
     "bcryptjs": "^2.4.3",
-    "js-cookie": "^3.0.0",
-    "lucide-react": "^0.290.0"
+    "js-cookie": "^3.0.0"
   },
   "devDependencies": {
     "@types/js-cookie": "^3.0.0",
